[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0.72"
tempdir = "0.3"
tide = "0.16.0"
async-std = { version = "1.6.0", features = ["attributes"] }

